// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it Debe incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    Sumar
  </button>
</div>
`;

exports[`it renders without crashing 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
